# app-store-web-scraper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
app_store_scraper/: app_store.py  base.py  podcast.py
src/app_store_web_scraper/: __init__.py  _entry.py  _errors.py  _session.py  _utils.py
tests/: test_all.py  test_integration.py
