[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app-store-web-scraper"
dynamic = ["version"]
description = "Scrape reviews from Apple's App Store"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Denis Washington" },
    { name = "Eric Lim" },
]
keywords = [
    "app store",
    "ios",
    "ios apps",
    "podcasts",
    "review",
    "scraper",
    "scraping",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "urllib3>=2.0.0,<3",
]

[project.urls]
Homepage = "https://github.com/futurice/app-store-web-scraper"
Source = "https://github.com/futurice/app-store-web-scraper"

[tool.hatch.version]
path = "src/app_store_web_scraper/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.hatch.build.targets.wheel]
packages = ["src/app_store_web_scraper"]

[tool.hatch.envs.default]
path = ".venv"
dependencies = [
    "black==24.4.2",
    "faker==25.9.1",
    "pre-commit==3.7.1",
    "pytest==8.2.2",
    "pytest-httpserver==1.0.10",
    "ruff==0.4.10",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "FA"]
